--- a/lib/web_socket_elixir_web/templates/page/index.html.eex
+++ b/lib/web_socket_elixir_web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
 <div id="messages" role="log" aria-live="polite"></div>
 <input id="chat-input" type="text"></input>
 <div><h1>Usuarios Ativos</h1></div>
-<div id="users"></div>
+<%= live_render(@conn, WebSocketElixirWeb.ActiveUsersLive)%>
